# ClassAssistant

./: .gitignore  BACKEND_INTEGRATION_ISSUES.md  LICENSE  README.md  build.ps1  dev.bat  dev.sh
api-service/: .env.example  backend.spec  config.py  main.py  pyproject.toml  requirements.txt  start_server.bat
api-service/routers/: monitor_router.py  ppt_router.py  rescue_router.py  summary_router.py
api-service/services/: asr_service.py  llm_service.py  monitor_service.py  summary_service.py  transcript_service.py
app-ui/: build-with-backend.sh  package-lock.json  package.json
app-ui/src/: App.tsx  index.css
app-ui/src-tauri/: Cargo.toml  tauri.conf.json
app-ui/src-tauri/src/: lib.rs
app-ui/src/components/: AlertOverlay.tsx  CatchupPanel.tsx  RescuePanel.tsx  SettingsPanel.tsx  StartMonitorPanel.tsx  TitleBar.tsx  ToolBar.tsx
app-ui/src/hooks/: useWebSocket.ts
app-ui/src/services/: api.ts  preferences.ts
data/: keywords.txt
docs/: swift-native-frontend.md  开发指南.md
native-ui/: Package.swift
native-ui/Sources/ClassFoxNative/App/: ClassFoxNativeApp.swift
native-ui/Sources/ClassFoxNative/Models/: APIModels.swift  UIStyleSettings.swift
native-ui/Sources/ClassFoxNative/Services/: AlertWebSocketClient.swift  BackendAPIClient.swift  PreferencesStore.swift
native-ui/Sources/ClassFoxNative/ViewModels/: AppViewModel.swift
native-ui/Sources/ClassFoxNative/Views/: AlertBannerView.swift  HeaderBarView.swift  MainControlView.swift  RootView.swift  SettingsView.swift
native-ui/Sources/ClassFoxNative/Windowing/: WindowCoordinator.swift
